update(index.html): change title to reflect Teaching Factory, enhance content clarity, and improve form elements for better user interaction

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peternakan Sapi Perah & Potong Polije - Company Profile</title>
+    <title>Peternakan Sapi Perah & Potong Polije - Teaching Factory</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -537,7 +537,8 @@
         }
         
         .form-group input,
-        .form-group textarea {
+        .form-group textarea,
+        .form-group select {
             width: 100%;
             padding: 1rem;
             border: 1px solid rgba(0, 0, 0, 0.1);
@@ -545,6 +546,7 @@
             background: var(--bg-white);
             color: var(--text-dark);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            font-family: 'Poppins', sans-serif;
         }
         
         .form-group input::placeholder,
@@ -875,7 +877,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Peternakan Sapi Perah & Potong Polije</h1>
-            <p>Menghadirkan produk berkualitas tinggi dengan standar modern dan edukasi terbaik</p>
+            <p>Teaching Factory yang menghadirkan produk berkualitas tinggi dengan standar modern dan edukasi terbaik untuk mahasiswa</p>
             <a href="#about" class="cta-button">Pelajari Lebih Lanjut</a>
         </div>
         <div class="scroll-indicator">
@@ -887,14 +889,15 @@
     <section id="about" class="section about">
         <div class="container">
             <h2 class="section-title fade-in">Tentang Kami</h2>
-            <p class="section-subtitle fade-in">Peternakan modern berbasis pendidikan yang berkomitmen pada kualitas</p>
+            <p class="section-subtitle fade-in">Teaching Factory yang mengintegrasikan pendidikan, penelitian, dan produksi peternakan</p>
 
             <div class="about-content">
                 <div class="about-text fade-in">
-                    <h3>Visi & Misi Kami</h3>
-                    <p>Sebagai bagian dari Teaching Factory Politeknik Negeri Jember, kami berkomitmen menjadi pusat peternakan modern yang tidak hanya menghasilkan produk berkualitas tinggi, tetapi juga menjadi sarana pembelajaran yang efektif bagi mahasiswa.</p>
-                    <p>Dengan standar kebersihan dan teknologi modern, kami memastikan setiap produk yang dihasilkan memenuhi standar kualitas terbaik untuk konsumen dan industri.</p>
-                    <p>Peternakan kami berdiri sejak 2015 dan telah berkembang menjadi salah satu pusat peternakan terdepan di Jawa Timur dengan kapasitas 100 ekor sapi.</p>
+                    <h3>Sejarah & Visi Kami</h3>
+                    <p>Peternakan Sapi Perah dan Potong Polije dimulai sebagai inisiatif Jurusan Peternakan Politeknik Negeri Jember. Awalnya dibangun untuk keperluan akademik, kemudian berkembang menjadi Teaching Factory yang mengintegrasikan pendidikan,
+                        penelitian, dan produksi.</p>
+                    <p>Selain fokus pada produksi dan bisnis, kami juga berkomitmen untuk pendidikan serta membuka lapangan pekerjaan bagi warga sekitar. Peternakan kami memiliki kapasitas 30-40 ekor sapi per siklus dengan fasilitas yang lengkap dan modern.</p>
+                    <p>Sebagai Teaching Factory, kami menyediakan fasilitas pembelajaran yang mendukung mahasiswa untuk praktik langsung, mencoba teknologi terbaru, dan tidak hanya belajar teori di kelas.</p>
                 </div>
                 <div class="about-image fade-in">
                     <img src="https://images.unsplash.com/photo-1544966503-7cc4bbbc0f4a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Peternakan Modern">
@@ -907,7 +910,7 @@
     <section id="products" class="section products">
         <div class="container">
             <h2 class="section-title fade-in">Produk Kami</h2>
-            <p class="section-subtitle fade-in">Produk berkualitas tinggi dengan standar internasional</p>
+            <p class="section-subtitle fade-in">Produk berkualitas tinggi hasil Teaching Factory yang terintegrasi</p>
 
             <div class="products-grid">
                 <div class="product-card fade-in">
@@ -915,7 +918,7 @@
                         <i class="fas fa-glass-whiskey"></i>
                     </div>
                     <h3>Susu Segar</h3>
-                    <p>Susu segar berkualitas tinggi yang dihasilkan dari sapi perah dengan standar kebersihan dan nutrisi terbaik.</p>
+                    <p>Susu segar berkualitas unggulan yang dihasilkan dari sapi perah dengan pakan bernutrisi tinggi untuk produksi optimal.</p>
                 </div>
 
                 <div class="product-card fade-in">
@@ -923,23 +926,23 @@
                         <i class="fas fa-drumstick-bite"></i>
                     </div>
                     <h3>Daging Sapi</h3>
-                    <p>Daging sapi segar dan beku dengan kualitas premium, dihasilkan dari sapi potong yang sehat dan terawat.</p>
+                    <p>Daging sapi potong berkualitas tinggi, termasuk sapi PO (Peranakan Ongole) yang menjadi keunggulan produk kami.</p>
                 </div>
 
                 <div class="product-card fade-in">
                     <div class="product-icon">
-                        <i class="fas fa-graduation-cap"></i>
+                        <i class="fas fa-seedling"></i>
                     </div>
-                    <h3>Edukasi & Pelatihan</h3>
-                    <p>Program edukasi dan pelatihan peternakan modern untuk mahasiswa, peternak, dan masyarakat umum.</p>
+                    <h3>Pupuk Organik</h3>
+                    <p>Pupuk organik berkualitas yang dihasilkan dari kotoran sapi, ramah lingkungan dan efektif untuk pertanian.</p>
                 </div>
 
                 <div class="product-card fade-in">
                     <div class="product-icon">
-                        <i class="fas fa-flask"></i>
+                        <i class="fas fa-leaf"></i>
                     </div>
-                    <h3>Penelitian</h3>
-                    <p>Fasilitas penelitian dan pengembangan teknologi peternakan untuk kemajuan industri pertanian.</p>
+                    <h3>Rumput Unggulan</h3>
+                    <p>Rumput berkualitas tinggi yang ditanam khusus untuk pakan ternak, mendukung produksi susu dan daging optimal.</p>
                 </div>
             </div>
         </div>
@@ -949,39 +952,39 @@
     <section id="services" class="section services">
         <div class="container">
             <h2 class="section-title fade-in">Layanan Kami</h2>
-            <p class="section-subtitle fade-in">Layanan terbaik untuk kebutuhan peternakan dan pendidikan</p>
+            <p class="section-subtitle fade-in">Layanan Teaching Factory yang mengintegrasikan pendidikan dan produksi</p>
 
             <div class="services-grid">
                 <div class="service-card fade-in">
                     <div class="service-icon">
-                        <i class="fas fa-truck"></i>
+                        <i class="fas fa-graduation-cap"></i>
                     </div>
-                    <h3>Pengiriman Produk</h3>
-                    <p>Layanan pengiriman produk segar ke seluruh wilayah Jember dan sekitarnya.</p>
+                    <h3>Praktik Mahasiswa</h3>
+                    <p>Fasilitas lengkap untuk praktik langsung mahasiswa dengan ruang praktik dan peralatan modern.</p>
                 </div>
 
                 <div class="service-card fade-in">
                     <div class="service-icon">
-                        <i class="fas fa-users"></i>
+                        <i class="fas fa-flask"></i>
                     </div>
-                    <h3>Konsultasi Peternakan</h3>
-                    <p>Konsultasi dan bimbingan untuk pengembangan usaha peternakan yang berkelanjutan.</p>
+                    <h3>Penelitian & Pengembangan</h3>
+                    <p>Fasilitas penelitian untuk pengembangan teknologi peternakan dan inovasi produk.</p>
                 </div>
 
                 <div class="service-card fade-in">
                     <div class="service-icon">
-                        <i class="fas fa-microscope"></i>
+                        <i class="fas fa-cogs"></i>
                     </div>
-                    <h3>Laboratorium</h3>
-                    <p>Fasilitas laboratorium untuk analisis kualitas produk dan penelitian.</p>
+                    <h3>Fasilitas Modern</h3>
+                    <p>Listrik stabil, mesin perah, chopper gabah, traktor, dan peralatan pemotongan yang lengkap.</p>
                 </div>
 
                 <div class="service-card fade-in">
                     <div class="service-icon">
                         <i class="fas fa-handshake"></i>
                     </div>
-                    <h3>Kerjasama</h3>
-                    <p>Program kerjasama dengan industri dan institusi untuk pengembangan bersama.</p>
+                    <h3>Kerjasama Strategis</h3>
+                    <p>Fokus pada akademik dan kerjasama strategis untuk pengembangan bisnis peternakan.</p>
                 </div>
             </div>
         </div>
@@ -991,7 +994,7 @@
     <section id="contact" class="section contact">
         <div class="container">
             <h2 class="section-title fade-in">Hubungi Kami</h2>
-            <p class="section-subtitle fade-in">Mari berkolaborasi untuk kemajuan peternakan Indonesia</p>
+            <p class="section-subtitle fade-in">Mari berkolaborasi untuk kemajuan peternakan dan pendidikan Indonesia</p>
 
             <div class="contact-content">
                 <div class="contact-info fade-in">
@@ -1027,11 +1030,31 @@
 
                     <div class="contact-item">
                         <div class="contact-icon">
+                            <i class="fab fa-facebook"></i>
+                        </div>
+                        <div>
+                            <h4>Facebook</h4>
+                            <p>Peternakan Polije Official</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-item">
+                        <div class="contact-icon">
                             <i class="fas fa-clock"></i>
                         </div>
                         <div>
                             <h4>Jam Operasional</h4>
-                            <p>Senin - Jumat: 08:00 - 16:00<br>Sabtu: 08:00 - 12:00</p>
+                            <p>Senin - Jumat: 08:00 - 16:00<br>Sabtu: 08:00 - 12:00<br>Minggu: Tutup</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-item">
+                        <div class="contact-icon">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <div>
+                            <h4>Kapasitas</h4>
+                            <p>30-40 ekor sapi per siklus<br>Fasilitas lengkap untuk mahasiswa</p>
                         </div>
                     </div>
                 </div>
@@ -1054,8 +1077,25 @@
                         </div>
 
                         <div class="form-group">
+                            <label for="institution">Institusi/Universitas</label>
+                            <input type="text" id="institution" name="institution" placeholder="Nama institusi atau universitas">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="purpose">Tujuan Kerjasama</label>
+                            <select id="purpose" name="purpose">
+                                <option value="">Pilih tujuan kerjasama</option>
+                                <option value="praktik">Praktik Mahasiswa</option>
+                                <option value="penelitian">Penelitian</option>
+                                <option value="pembelian">Pembelian Produk</option>
+                                <option value="kerjasama">Kerjasama Strategis</option>
+                                <option value="lainnya">Lainnya</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
                             <label for="message">Pesan</label>
-                            <textarea id="message" name="message" rows="5" placeholder="Tuliskan pesan Anda" required></textarea>
+                            <textarea id="message" name="message" rows="5" placeholder="Tuliskan pesan atau detail kerjasama yang diinginkan" required></textarea>
                         </div>
 
                         <button type="submit" class="submit-btn">Kirim Pesan</button>
