fix(index.html): remove placeholder text from purpose dropdown for improved clarity

--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
                         </div>
                         <div class="form-group">
                             <select id="purpose" name="purpose" required onchange="this.style.color='var(--text-dark)'">
-                                <option value="" disabled selected hidden>Pilih tujuan</option>
+                                <option value="" disabled selected hidden></option>
                                 <option value="praktik">Praktik Mahasiswa</option>
                                 <option value="penelitian">Penelitian</option>
                                 <option value="pembelian">Pembelian Produk</option>
