Add product and service pages with responsive design and animations
- Created products.html with a grid layout for showcasing featured products.
- Created services.html highlighting available services with modern design.
- Implemented smooth scrolling, loading animations, and a responsive navigation menu.
- Added fade-in effects for elements on scroll and 3D tilt effects for product and service cards.
- Included Font Awesome icons and custom styles for a cohesive look.

--- a/index.html
+++ b/index.html
@@ -765,13 +765,13 @@
                 <i class="fas fa-cow"></i> Peternakan Polije
             </a>
             <ul class="nav-menu" id="nav-menu">
-                <li><a href="#home" class="nav-link">Beranda</a></li>
-                <li><a href="#about" class="nav-link">Tentang</a></li>
-                <li><a href="#products" class="nav-link">Produk</a></li>
-                <li><a href="#services" class="nav-link">Layanan</a></li>
-                <li><a href="#gallery" class="nav-link">Galeri</a></li>
-                <li><a href="#faq" class="nav-link">FAQ</a></li>
-                <li><a href="#contact" class="nav-link">Kontak</a></li>
+                <li><a href="index.html" class="nav-link active">Beranda</a></li>
+                <li><a href="about.html" class="nav-link">Tentang</a></li>
+                <li><a href="products.html" class="nav-link">Produk</a></li>
+                <li><a href="services.html" class="nav-link">Layanan</a></li>
+                <li><a href="gallery.html" class="nav-link">Galeri</a></li>
+                <li><a href="faq.html" class="nav-link">FAQ</a></li>
+                <li><a href="contact.html" class="nav-link">Kontak</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -786,274 +786,10 @@
         <div class="hero-content fade-in">
             <h1>Peternakan Sapi Perah & Potong Polije</h1>
             <p>Teaching Factory yang menghadirkan produk berkualitas tinggi dengan standar modern dan edukasi terbaik untuk mahasiswa.</p>
-            <a href="#about" class="cta-button">Pelajari Lebih Lanjut</a>
-        </div>
-        <a href="#about" class="scroll-indicator" aria-label="Scroll to about section">
-            <i class="fas fa-chevron-down"></i>
-        </a>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="section about">
-        <div class="container">
-            <h2 class="section-title fade-in">Tentang Kami</h2>
-            <p class="section-subtitle fade-in">Mengintegrasikan pendidikan, penelitian, dan produksi peternakan modern.</p>
-
-            <div class="about-content">
-                <div class="about-text fade-in">
-                    <h3>Sejarah & Visi Kami</h3>
-                    <p>Berawal dari inisiatif Jurusan Peternakan Politeknik Negeri Jember, peternakan kami berkembang menjadi Teaching Factory terintegrasi yang menjadi pusat pembelajaran, riset, dan produksi.</p>
-                    <p>Kami berkomitmen pada pendidikan, pemberdayaan masyarakat, dan penyediaan produk peternakan berkualitas. Dengan kapasitas 30-40 ekor sapi per siklus dan fasilitas modern, kami menjadi laboratorium hidup bagi mahasiswa.</p>
-                </div>
-                <div class="about-image fade-in">
-                    <img src="https://images.unsplash.com/photo-1544966503-7cc4bbbc0f4a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Peternakan Modern">
-                </div>
-            </div>
+            <a href="about.html" class="cta-button">Pelajari Lebih Lanjut</a>
         </div>
     </section>
 
-    <!-- Products Section -->
-    <section id="products" class="section products">
-        <div class="container">
-            <h2 class="section-title fade-in">Produk Unggulan</h2>
-            <p class="section-subtitle fade-in">Kualitas terbaik dari peternakan yang dikelola secara profesional dan edukatif.</p>
-
-            <div class="products-grid">
-                <div class="product-card fade-in">
-                    <div class="product-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path></svg>
-                    </div>
-                    <h3>Susu Segar</h3>
-                    <p>Susu murni bernutrisi tinggi, hasil dari sapi perah yang dirawat dengan pakan berkualitas dan manajemen modern.</p>
-                </div>
-
-                <div class="product-card fade-in">
-                    <div class="product-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z"></path><path d="M18.36 6.64a9 9 0 0 1-12.73 0"></path><path d="M21.17 9.46a5 5 0 0 1-7.07 0"></path></svg>
-                    </div>
-                    <h3>Daging Sapi</h3>
-                    <p>Daging sapi potong premium, termasuk jenis Peranakan Ongole (PO) yang menjadi keunggulan kami.</p>
-                </div>
-
-                <div class="product-card fade-in">
-                    <div class="product-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.5 12H12c-2.2 0-4-1.8-4-4V4c0-1.1.9-2 2-2h4c1.1 0 2 .9 2 2v4c0 2.2-1.8 4-4 4z"></path><path d="M12 12v10"></path><path d="M12 12c-2.2 0-4 1.8-4 4v4c0 1.1.9 2 2 2h4c1.1 0 2-.9 2-2v-4c0-2.2-1.8-4-4-4z"></path></svg>
-                    </div>
-                    <h3>Pupuk Organik</h3>
-                    <p>Pupuk kompos dari limbah ternak yang diolah untuk menyuburkan tanah secara alami dan ramah lingkungan.</p>
-                </div>
-
-                <div class="product-card fade-in">
-                    <div class="product-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-                    </div>
-                    <h3>Rumput Pakan</h3>
-                    <p>Rumput unggulan yang dibudidayakan khusus sebagai pakan ternak untuk menjamin kualitas produksi.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="section services">
-        <div class="container">
-            <h2 class="section-title fade-in">Layanan Kami</h2>
-            <p class="section-subtitle fade-in">Fasilitas lengkap untuk mendukung pendidikan, penelitian, dan kemitraan strategis.</p>
-
-            <div class="services-grid">
-                <div class="service-card fade-in">
-                    <div class="service-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path></svg>
-                    </div>
-                    <h3>Praktik Mahasiswa</h3>
-                    <p>Menyediakan sarana praktik langsung dengan peralatan modern untuk menunjang kompetensi mahasiswa.</p>
-                </div>
-
-                <div class="service-card fade-in">
-                    <div class="service-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z"></path><path d="M18.36 6.64a9 9 0 0 1-12.73 0"></path><path d="M21.17 9.46a5 5 0 0 1-7.07 0"></path></svg>
-                    </div>
-                    <h3>Riset & Inovasi</h3>
-                    <p>Mendukung penelitian untuk pengembangan teknologi peternakan dan inovasi produk yang berkelanjutan.</p>
-                </div>
-
-                <div class="service-card fade-in">
-                    <div class="service-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.5 12H12c-2.2 0-4-1.8-4-4V4c0-1.1.9-2 2-2h4c1.1 0 2 .9 2 2v4c0 2.2-1.8 4-4 4z"></path><path d="M12 12v10"></path><path d="M12 12c-2.2 0-4 1.8-4 4v4c0 1.1.9 2 2 2h4c1.1 0 2-.9 2-2v-4c0-2.2-1.8-4-4-4z"></path></svg>
-                    </div>
-                    <h3>Fasilitas Modern</h3>
-                    <p>Dilengkapi mesin perah, chopper, traktor, dan peralatan pendukung operasional peternakan modern.</p>
-                </div>
-
-                <div class="service-card fade-in">
-                    <div class="service-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-                    </div>
-                    <h3>Kerjasama Strategis</h3>
-                    <p>Terbuka untuk kemitraan dengan berbagai pihak untuk memajukan industri peternakan nasional.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Gallery Section -->
-    <section id="gallery" class="section gallery">
-        <div class="container">
-            <h2 class="section-title fade-in">Galeri Kami</h2>
-            <p class="section-subtitle fade-in">Lihat lebih dekat fasilitas, ternak, dan kegiatan di Peternakan Polije.</p>
-            <div class="gallery-grid">
-                <div class="gallery-item fade-in">
-                    <img src="https://images.unsplash.com/photo-1593989935132-a94a878a1e9b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Sapi di padang rumput">
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="https://images.unsplash.com/photo-1552809911-22712e5e4a9b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Pemerahan susu">
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="https://images.unsplash.com/photo-1620310123032-0a014161d5c0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Anak sapi">
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="https://images.unsplash.com/photo-1516457323919-a1a71a042b1a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Kandang sapi modern">
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="https://images.unsplash.com/photo-1604888216087-a879a7c67b21?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Mahasiswa praktik">
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="https://images.unsplash.com/photo-1589998059171-988d887df646?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Produk susu segar">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Lightbox -->
-    <div id="lightbox" class="lightbox">
-        <span class="close-btn">&times;</span>
-        <img class="lightbox-content" id="lightbox-img">
-        <a class="prev-btn">&#10094;</a>
-        <a class="next-btn">&#10095;</a>
-    </div>
-
-    <!-- FAQ Section -->
-    <section id="faq" class="section faq">
-        <div class="container">
-            <h2 class="section-title fade-in">Pertanyaan Umum</h2>
-            <p class="section-subtitle fade-in">Temukan jawaban atas pertanyaan yang sering diajukan tentang produk dan layanan kami.</p>
-
-            <div class="faq-container">
-                <div class="faq-item fade-in">
-                    <div class="faq-question">
-                        <h4>Bagaimana cara membeli produk dari Peternakan Polije?</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Anda dapat langsung datang ke lokasi kami atau menghubungi kami melalui telepon atau email yang tertera di bagian kontak untuk pemesanan dalam jumlah besar. Kami juga berencana untuk meluncurkan platform pemesanan online dalam
-                            waktu dekat.</p>
-                    </div>
-                </div>
-
-                <div class="faq-item fade-in">
-                    <div class="faq-question">
-                        <h4>Apakah produk susu dan daging dijamin halal dan higienis?</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Tentu saja. Semua proses, mulai dari pemeliharaan ternak, pemerahan susu, hingga pemotongan, dilakukan sesuai dengan standar operasional prosedur (SOP) yang ketat dan prinsip halal. Kebersihan dan kualitas adalah prioritas utama
-                            kami.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="faq-item fade-in">
-                    <div class="faq-question">
-                        <h4>Apakah Peternakan Polije terbuka untuk kunjungan edukasi?</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Ya, kami sangat terbuka untuk kunjungan edukasi dari sekolah, universitas, atau kelompok masyarakat. Silakan hubungi kami terlebih dahulu untuk menjadwalkan kunjungan agar kami dapat mempersiapkannya dengan baik.</p>
-                    </div>
-                </div>
-
-                <div class="faq-item fade-in">
-                    <div class="faq-question">
-                        <h4>Bagaimana cara mengajukan program magang atau praktik kerja di sini?</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Bagi mahasiswa yang tertarik untuk magang, silakan kirimkan proposal dan CV Anda ke email kami. Program magang biasanya dibuka setiap semester, namun kami juga menerima permohonan di luar jadwal tersebut tergantung pada kebutuhan.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="section contact">
-        <div class="container">
-            <h2 class="section-title fade-in">Hubungi Kami</h2>
-            <p class="section-subtitle fade-in">Mari berkolaborasi untuk kemajuan peternakan dan pendidikan di Indonesia.</p>
-
-            <div class="contact-content">
-                <div class="contact-info fade-in">
-                    <div class="contact-item">
-                        <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                        <div>
-                            <h4>Alamat</h4>
-                            <p>UPT Pengembangan Pertanian Terpadu, Politeknik Negeri Jember<br>Jl. Mastrip No. 59, Jember, Jawa Timur</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon"><i class="fas fa-phone"></i></div>
-                        <div>
-                            <h4>Telepon</h4>
-                            <p>+62 331 333 1234</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon"><i class="fas fa-envelope"></i></div>
-                        <div>
-                            <h4>Email</h4>
-                            <p>peternakan@polije.ac.id</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon"><i class="fas fa-clock"></i></div>
-                        <div>
-                            <h4>Jam Operasional</h4>
-                            <p>Senin - Jumat: 08:00 - 16:00</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="contact-form fade-in">
-                    <form>
-                        <div class="form-group">
-                            <input type="text" id="name" name="name" placeholder=" " required>
-                            <label for="name">Nama Lengkap</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" id="email" name="email" placeholder=" " required>
-                            <label for="email">Email</label>
-                        </div>
-                        <div class="form-group">
-                            <select id="purpose" name="purpose" required onchange="this.style.color='var(--text-dark)'">
-                                <option value="" disabled selected hidden></option>
-                                <option value="praktik">Praktik Mahasiswa</option>
-                                <option value="penelitian">Penelitian</option>
-                                <option value="pembelian">Pembelian Produk</option>
-                                <option value="kerjasama">Kerjasama</option>
-                                <option value="lainnya">Lainnya</option>
-                            </select>
-                            <label for="purpose">Tujuan</label>
-                        </div>
-                        <div class="form-group">
-                            <textarea id="message" name="message" rows="5" placeholder=" " required></textarea>
-                            <label for="message">Pesan</label>
-                        </div>
-                        <button type="submit" class="submit-btn">Kirim Pesan</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -1102,32 +838,6 @@
                 });
             });
 
-            // Active nav link on scroll
-            const sections = document.querySelectorAll('section[id]');
-            const navLinks = document.querySelectorAll('.nav-link');
-            const heroSection = document.querySelector('.hero');
-
-            window.addEventListener('scroll', () => {
-                // Parallax effect
-                const scrolled = window.pageYOffset;
-                heroSection.style.backgroundPositionY = scrolled * 0.5 + 'px';
-
-
-                let current = '';
-                sections.forEach(section => {
-                    const sectionTop = section.offsetTop;
-                    if (pageYOffset >= sectionTop - 60) {
-                        current = section.getAttribute('id');
-                    }
-                });
-
-                navLinks.forEach(link => {
-                    link.classList.remove('active');
-                    if (link.getAttribute('href').includes(current)) {
-                        link.classList.add('active');
-                    }
-                });
-            });
 
             // Fade in animation on scroll
             const observer = new IntersectionObserver((entries) => {
